# satellite

./: Cargo.toml  LICENSE  README.md  index.js  package.json
src/: constants.rs  doppler_factor.rs  ext.rs  io.js  io.rs  iocopy.rs  lib.rs  main.rs  propagation.rs  transforms.rs  types.rs
src/propagation/: dpper.rs  dscom.rs  dsinit.rs  dspace.rs  gstime.rs  initl.rs  propagate.rs  sgp4.rs  sgp4init.rs
tests/: dsinit_test.rs  initl_test.rs  sgp4Catalog_test.rs
tests/common/: mod.rs
