[package]
name = "satellite"
version = "0.1.1"
edition = "2021"
authors = ["Yu Peng <1196194875@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/njueyupeng/satellite"
description = "Modular set of functions for SGP4 and SDP4 propagation of TLEs."


[dependencies]

chrono = "0.4.38"
wasm-bindgen="0.2.84"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.1"

[lib]
crate-type = ["cdylib","rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"




